--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -19,7 +19,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: [aws-ec2]
+    runs-on: [self-hosted]
     steps:
       - name: Pull image from docker hub
         run: docker pull midzy0526/test:latest
